src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert_normal__no_params.snap
---
source: src/builder/tests/inserts/insert_normal.rs
expression: res

---
(
    "INSERT INTO \"public\".\"mysimpletable\" DEFAULT VALUES RETURNING *",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
