src/builder/tests/inserts/snapshots/ciboulette2postgres__builder__tests__inserts__insert_normal__no_returning.snap
---
source: src/builder/tests/inserts/insert_normal.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" (
    "public"."mysimpletable"."first-name",
    "public"."mysimpletable"."last-name"
  )
VALUES
  ($0, $1);
